correct spacing between elements
correct fonts and font colors

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -121,7 +121,7 @@ h1 {
 .navbar__link {
     display: inline-block;
     vertical-align: top;
-    margin: 0 40px;
+    margin: 0 20px;
     text-decoration: none;
     color: white;
     font-family: 'Roboto', sans-serif;
@@ -158,7 +158,7 @@ h1 {
 }
 
 .company__inner {
-    max-width: 685px;
+    max-width: 680px;
 }
 
 .company__title {
@@ -171,6 +171,7 @@ h1 {
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
     font-weight: 100;
+    line-height: 1.5;
 }
 
 
@@ -189,18 +190,18 @@ h1 {
 .about__text {
     max-width: 50%;
     min-height: 830px;
-    padding: 100px 110px 100px 0;
+    padding: 100px 105px 100px 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .about__uptitle {
-    font-family: "myriad-pro", sans-serif;
-    font-style: normal;
-    font-weight: 500;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
     font-size: 13px;
     text-transform: uppercase;
+    letter-spacing: 1px;
     color: #838383;
 }
 
@@ -208,13 +209,18 @@ h1 {
     font-family: "Roboto", sans-serif;
     font-size: 50px;
     font-weight: 100;
+    max-height: 90px;
+    color: #121212;
+
 }
 
 .about__info {
     font-family: "Roboto", sans-serif;
     font-size: 16px;
-    font-weight: 100;
-    color: #5d5c5b;
+    font-weight: 300;
+    letter-spacing: 1px;
+    color: #121212;
+    line-height: 1.6;
 }
 
 .about__button {
@@ -223,6 +229,7 @@ h1 {
     font-size: 11px;
     font-weight: 500;
     color: black;
+    text-transform: uppercase;
 }
 
 .img-wrap-1 {
